# StaticVariables

./: README.md  examples.py  pyproject.toml
StaticVars/: __init__.py
